--- a/test.ipynb
+++ b/test.ipynb
@@ -656,7 +656,7 @@
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "eval_loader=get_eval_loader(root=\"./data/processed/V\", batch_size=1, shuffle=False,gray=True)\n",
     "\n",
-    "model=NonResizing_GrayGenerator(n_res=6).to(device)\n",
+    "model=BaseGenerator(n_res=6).to(device)\n",
     "checkpoint=torch.load('./checkpoints/CycleGAN/NonResizig_Gray/checkpoint-epoch-30.ckpt')\n",
     "model.load_state_dict(checkpoint['F_state_dict'])\n",
     "torch_to_image = transforms.Compose([\n",
